--- a/weekopdracht week 2/style.css
+++ b/weekopdracht week 2/style.css
@@ -1,10 +1,18 @@
+.wrapper{
+    margin-top: 50px;
+    /*justify-content: center;*/
+    text-align: center;
+}
 .letteropmaak{
     width: 50px;
     height: 50px;
     margin-bottom: 3px;
     font-size: 40px;
     text-transform: uppercase;
-    background-color: rgb(34, 152, 182);
+    background-image: linear-gradient(#357ebb, #0b4a92);
     color: white;
     text-align: center;
 }
+
+#357ebb
+#0b4a92
