--- a/weekopdracht week 2/style.css
+++ b/weekopdracht week 2/style.css
@@ -9,10 +9,9 @@
     margin-bottom: 3px;
     font-size: 40px;
     text-transform: uppercase;
-    background-image: linear-gradient(#357ebb, #0b4a92);
+    background-image: linear-gradient(#357ebb, #0b4a92); /* rode gradient (#e44752, #d92730) */
     color: white;
     text-align: center;
 }
 
-#357ebb
-#0b4a92
+
